Removing logging DNS queries

--- a/unbound-dns/unbound.conf
+++ b/unbound-dns/unbound.conf
@@ -50,7 +50,7 @@ server:
     log-local-actions: no
 
     # Do not print one line per query to the log
-    log-queries: yes
+    log-queries: no
 
     # Do not print one line per reply to the log
     log-replies: yes
