Removing file logging from unbound dns and instead using STDOUT

--- a/unbound-dns/unbound.conf
+++ b/unbound-dns/unbound.conf
@@ -59,7 +59,8 @@ server:
     log-servfail: no
 
     # Further limit logging
-    logfile: "/opt/unbound/etc/unbound/unbound.log"
+    # Uncomment to feed logs to the files instead of syslog:
+    # logfile: "/opt/unbound/etc/unbound/unbound.log"
 
     # Only log errors
     verbosity: 0
