Updating compose file to send logging to rsyslog-server.

--- a/unbound-dns/unbound.conf
+++ b/unbound-dns/unbound.conf
@@ -61,6 +61,8 @@ server:
     # Further limit logging
     # Uncomment to feed logs to the files instead of syslog:
     # logfile: "/opt/unbound/etc/unbound/unbound.log"
+    # AND remove this line:
+    logfile: ""
 
     # Only log errors
     verbosity: 0
