--- a/unbound-dns/docker-compose.yml
+++ b/unbound-dns/docker-compose.yml
@@ -17,3 +17,16 @@ services:
     ports:
       - "53:53/udp"
       - "53:53/tcp"
+
+    volumes:
+      - ~/unbound-config/unbound.conf:/opt/unbound/etc/unbound/unbound.conf:ro
+      # - ~/unbound-config/unbound.log:/opt/unbound/etc/unbound/unbound.log
+
+    environment:
+      - TZ=Europe/Stockholm
+
+    logging:
+      driver: syslog
+      options:
+        syslog-address: "udp://192.168.1.229:10514"
+        tag: "unbound"
